--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:lohith566@gmail.com">lohith566@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a full-stack web developer and a student pursuing Master's in Computer Engineering @ Iowa State University.
+                    <p class="lead mb-5">I am a full-stack developer and a student pursuing Master's in Computer Engineering @ Iowa State University.
                     <br>Actively seeking for summer internship of 2022 </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/lohith-reddy-kalluru-72521610b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BKN9EzWbfQiCAOjvdlkPVew%3D%3D"><i class="fab fa-linkedin-in"></i></a>
